tests/specs/bench/check_local_by_default2/check_local_by_default2.out
TS2322 [ERROR]: Type '12' is not assignable to type '"b"'.
const b: "b" = 12;
      ^
    at [WILDCARD]/check_local_by_default2.ts:3:7

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
